--- a/app.json
+++ b/app.json
@@ -1,30 +1,42 @@
 {
   "expo": {
-    "name": "MyProjectTwo",
-    "slug": "MyProjectTwo",
+    "name": "QRweather",
+    "slug": "weather-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/qr-logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/images/qr_splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#598090"
     },
     "assetBundlePatterns": [
       "**/*"
+    ],
+    "plugins": [
+      "expo-font",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow QRweather to access your camera.",
+          "microphonePermission": "Allow QRweather to access your microphone."
+        }
+      ]
     ],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "foregroundImage": "./assets/images/qr_splash.png",
+        "backgroundColor": "#598090"
+      },
+      "scheme": "qrweather",
+      "permissions": ["CAMERA"]
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/images/qr-logo.png"
     }
   }
 }
